--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
     "typedoc": "^0.21.4",
     "typedoc-plugin-sourcefile-url": "^1.0.6",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "@feng3d/event": "0.4.1",
+    "@feng3d/polyfill": "^0.4.2"
   }
 }
