--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
-    "@feng3d/event": "0.4.1",
-    "@feng3d/polyfill": "0.4.2"
+    "@feng3d/event": "0.4.1"
   }
 }
