--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@feng3d/shortcut",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "",
   "main": "lib/index.js",
   "module": "lib/index.es.js",
@@ -56,6 +56,6 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
-    "@feng3d/event": "0.4.1"
+    "@feng3d/event": "^0.4.2"
   }
 }
