--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,30 @@
 {
     "compilerOptions": {
         "target": "ES5",
-        "module": "CommonJS",
         "noImplicitAny": false,
         "sourceMap": true,
         "declarationMap": true,
         "declaration": true,
         "experimentalDecorators": true,
+        "composite": true,
         "lib": [
             "ES2015",
-            "DOM",
+            "DOM"
         ],
-        "outDir": "lib"
+        "outFile": "out/index.js"
     },
-    "include": [
-        "src/**/*.ts"
+    "references": [
+        {
+            "path": "../event/tsconfig.json"
+        },
     ],
-    "ts-node": {
-        "files": true,
-        "compilerOptions": {
-            "esModuleInterop": true
-        }
-    }
+    "files": [
+        "src/EventProxy.ts",
+        "src/WindowEventProxy.ts",
+        "src/Keyboard.ts",
+        "src/handle/KeyCapture.ts",
+        "src/handle/KeyState.ts",
+        "src/handle/ShortCutCapture.ts",
+        "src/ShortCut.ts",
+    ]
 }
