--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     },
     "references": [
         {
-            "path": "../event/tsconfig.json"
+            "path": "../event"
         },
     ],
     "files": [
